--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   <title>Carlos Diaz Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url= https://github.com/cad9179/mycv/blob/main/Carlos%20A.%20Diaz%20Resume%20Mar2021%20DA.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://github.com/cad9179/mycv/blob/main/Carlos%20A.%20Diaz%20Resume%20Mar2021%20DA.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
