--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html lang="en" style="width:100%; height:100%;">
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Carlos Diaz Resume</title>
-</head>
   <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/cad9179/mycv/raw/main/Carlos%20A.%20Diaz%20Resume%20Mar2021%20DA.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://github.com/cad9179/mycv/raw/main/Carlos%20A.%20Diaz%20Resume%20Mar2021%20DA.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
   </body>
 </html>
